--- a/app/src/main/res/layout/activity_myaccount_layout.xml
+++ b/app/src/main/res/layout/activity_myaccount_layout.xml
@@ -165,6 +165,7 @@
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_marginRight="10dp"
+            android:visibility="gone"
             android:src="@drawable/right_arrow" />
     </LinearLayout>
 
