--- a/app/src/main/res/layout/activity_pay_layout.xml
+++ b/app/src/main/res/layout/activity_pay_layout.xml
@@ -19,8 +19,9 @@
 
         <ImageView
             android:id="@+id/iv_yue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="fitCenter"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -75,12 +76,13 @@
 
         <ImageView
             android:id="@+id/iv_zfb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="fitCenter"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:src="@drawable/yue_icon" />
+            android:src="@drawable/zfb" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -131,8 +133,9 @@
 
         <ImageView
             android:id="@+id/iv_weixin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="fitCenter"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
