--- a/app/src/main/res/layout/fragment_home_lv_header.xml
+++ b/app/src/main/res/layout/fragment_home_lv_header.xml
@@ -17,7 +17,7 @@
             android:id="@+id/tv_office_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="经三商圈"
+            android:text=""
             android:textColor="@color/white"
             android:textSize="14dp" />
 
