--- a/app/src/main/res/layout/activity_orderdetail_layout.xml
+++ b/app/src/main/res/layout/activity_orderdetail_layout.xml
@@ -392,7 +392,13 @@
             android:layout_height="1px"
             android:background="@color/divideline" />
 
-
+            <Button
+                android:id="@+id/btn_comfirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="确认收货"
+                android:background="@drawable/login_btn_enable"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="10dp"
